--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "vscode": "^1.90.0"
   },
   "categories": [
-    "Other"
+    "Programming Languages",
+    "Other",
+    "Snippets"
   ],
   "activationEvents": [
       "onCommand:extension.copySelectionAsMarkdown",
@@ -16,6 +18,16 @@
       "onCommand:extension.copyFileFromSidebarAsMarkdown"
   ],
   "main": "./out/extension.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jassibacha/swift-markdown-copy.git"
+  },
+  "keywords": [
+    "markdown",
+    "copy",
+    "snippet",
+    "code block"
+  ],
   "contributes": {
     "commands": [
       {
