--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,13 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "build",
+			"type": "shell",
+			"command": "npm run compile",
+			"group": "build",
+			"problemMatcher": ["$tsc"]
 		}
 	]
 }
